--- a/page2.css
+++ b/page2.css
@@ -100,6 +100,7 @@ a:visited {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: large;
+      width: 350px;
 }
 
 .footer {
